--- a/index.html
+++ b/index.html
@@ -18,36 +18,68 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
-<body id="bodi">
+<body style="font-family:'Didact Gothic', sans-serif;color:rgb(122,122,122);">
     <div>
-        <nav class="navbar navbar-light navbar-expand-md navigation-clean">
-            <div class="container"><a class="navbar-brand" href="#">Company Name</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse"
-                    id="navcol-1">
+        <nav class="navbar navbar-light navbar-expand-md navigation-clean" style="background-color:rgb(247,247,247);">
+            <div class="container"><a class="navbar-brand" href="#"><img src="assets/img/logo_aynarra.jpg"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                <div
+                    class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav ml-auto">
-                        <li class="nav-item" role="presentation"><a class="nav-link active" href="#">First Item</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#">Second Item</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#">Third Item</a></li>
-                        <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#">Dropdown </a>
-                            <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">First Item</a><a class="dropdown-item" role="presentation" href="#">Second Item</a><a class="dropdown-item" role="presentation" href="#">Third Item</a></div>
-                        </li>
+                        <li class="nav-item" role="presentation"><a class="nav-link active" href="https://api.whatsapp.com/send?phone=6285335198614&amp;text=Saya%20Mau%20Beli%20Aynarra" style="background-color:green;color:white;"><strong>Beli Sekarang</strong></a></li>
                     </ul>
-                </div>
             </div>
-        </nav>
     </div>
-    <div class="container">
-        <div class="row">
+    </nav>
+    </div>
+    <div class="container" id="topcont">
+        <div class="row" style="padding:20px;">
             <div class="col" id="header">
                 <h3>Terjual lebih dari 19.300 unit</h3>
                 <h1>Dapatkan Produk Kosmetik Kecantikan Wanita Asia Kualitas Import</h1>
-                <h5>Ingin tampil cantik, putih, alami, dan awet muda dengan kosmetik berbahan natural<br></h5>
+                <h5 class="text-center">Ingin tampil cantik, putih, alami, dan awet muda dengan kosmetik berbahan natural<br></h5>
             </div>
         </div>
-        <div class="row">
+        <div class="row" style="padding:20px;">
             <div class="col"><img class="img-fluid" src="assets/img/produk_paket1.jpg"></div>
         </div>
+        <div class="row" id="ordertop">
+            <div class="col"></div>
+            <div class="col align-self-center"><a class="btn btn-primary btn-block" role="button" href="https://api.whatsapp.com/send?phone=6285335198614&amp;text=Saya%20Mau%20Beli%20Aynarra" target="_blank" id="btnorder">Miliki Sekarang</a></div>
+            <div class="col"></div>
+        </div>
     </div>
+    <section style="background-color:#f7f7f7;">
+        <div class="container-fluid" id="seccont" style="background-color:#efefef;">
+            <div class="row" id="s2r1">
+                <div class="col">
+                    <h1 class="text-center" id="s2r1h1">Pengguna Menunjukkan Hasil yang Sungguh Mengharukan<br></h1>
+                    <div class="row">
+                        <div class="col">
+                            <h2 class="text-center" style="font-size:52px;color:rgb(112,12,12);"><strong>Aynarra 7 Miracle Power</strong><br></h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row" style="padding:20px;">
+                <div class="col-md-4"><img class="img-fluid" src="assets/img/Screenshot_1.png"></div>
+                <div class="col-md-4"><img class="img-fluid" src="assets/img/Screenshot_2.png"></div>
+                <div class="col-md-4"><img class="img-fluid" src="assets/img/Screenshot_3.png"></div>
+            </div>
+            <div class="row" style="padding:20px;">
+                <div class="col-md-4"><img class="img-fluid" src="assets/img/Screenshot_4.png"></div>
+                <div class="col-md-4"><img class="img-fluid" src="assets/img/Screenshot_5.png"></div>
+                <div class="col-md-4"><img class="img-fluid" src="assets/img/Screenshot_6.png"></div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row" style="padding:20px;">
+                <div class="col">
+                    <h1 class="text-center" style="font-size:42px;"><strong>Memperkenalkan</strong></h1>
+                    <h1 class="text-center" style="color:rgb(112,12,12);font-size:52px;"><strong>Aynarra 7 Miracle Power</strong><br></h1>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
