--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="row" style="padding:20px;">
             <div class="col" id="header">
                 <h3>Terjual lebih dari 19.300 unit</h3>
-                <h1>Dapatkan Produk Kosmetik Kecantikan Wanita Asia Kualitas Import</h1>
+                <h1 style="color:rgb(51,51,51);">Dapatkan Produk Kosmetik Kecantikan Wanita Asia Kualitas Import</h1>
                 <h5 class="text-center">Ingin tampil cantik, putih, alami, dan awet muda dengan kosmetik berbahan natural<br></h5>
             </div>
         </div>
@@ -49,10 +49,10 @@
         </div>
     </div>
     <section style="background-color:#f7f7f7;">
-        <div class="container-fluid" id="seccont" style="background-color:#efefef;">
+        <div class="container-fluid" id="seccont" style="background-color:#e0e0e0;">
             <div class="row" id="s2r1">
                 <div class="col">
-                    <h1 class="text-center" id="s2r1h1">Pengguna Menunjukkan Hasil yang Sungguh Mengharukan<br></h1>
+                    <h1 class="text-center" id="s2r1h1" style="color:rgb(51,51,51);">Pengguna Menunjukkan Hasil yang Sungguh Mengharukan<br></h1>
                     <div class="row">
                         <div class="col">
                             <h2 class="text-center" style="font-size:52px;color:rgb(112,12,12);"><strong>Aynarra 7 Miracle Power</strong><br></h2>
@@ -71,10 +71,15 @@
                 <div class="col-md-4"><img class="img-fluid" src="assets/img/Screenshot_6.png"></div>
             </div>
         </div>
-        <div class="container">
-            <div class="row" style="padding:20px;">
+        <div class="container-fluid" id="topcont">
+            <div class="row" style="padding:60px 0 0 0;">
+                <div class="col"></div>
+                <div class="col"><img src="assets/img/logo_aynarra2.png" style="width:300px;"></div>
+                <div class="col"></div>
+            </div>
+            <div class="row" style="padding:10px 0 0 20px;">
                 <div class="col">
-                    <h1 class="text-center" style="font-size:42px;"><strong>Memperkenalkan</strong></h1>
+                    <h1 class="text-center" style="color:rgb(51,51,51);"><strong>Memperkenalkan</strong></h1>
                     <h1 class="text-center" style="color:rgb(112,12,12);font-size:52px;"><strong>Aynarra 7 Miracle Power</strong><br></h1>
                 </div>
             </div>
