--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
-<body style="font-family:'Didact Gothic', sans-serif;color:rgb(122,122,122);">
+<body style="font-family:'Didact Gothic', sans-serif;color:rgb(122,122,122);font-size:26px;">
     <div>
         <nav class="navbar navbar-light navbar-expand-md navigation-clean" style="background-color:rgb(247,247,247);">
             <div class="container"><a class="navbar-brand" href="#"><img src="assets/img/logo_aynarra.jpg"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
@@ -50,7 +50,7 @@
     </div>
     <section style="background-color:#f7f7f7;">
         <div class="container-fluid" id="seccont" style="background-color:#e0e0e0;">
-            <div class="row" id="s2r1">
+            <div class="row" id="s2r1" style="padding:20px 0;">
                 <div class="col">
                     <h1 class="text-center" id="s2r1h1" style="color:rgb(51,51,51);">Pengguna Menunjukkan Hasil yang Sungguh Mengharukan<br></h1>
                     <div class="row">
@@ -60,12 +60,12 @@
                     </div>
                 </div>
             </div>
-            <div class="row" style="padding:20px;">
+            <div class="row" style="padding:10px;">
                 <div class="col-md-4"><img class="img-fluid" src="assets/img/Screenshot_1.png"></div>
                 <div class="col-md-4"><img class="img-fluid" src="assets/img/Screenshot_2.png"></div>
                 <div class="col-md-4"><img class="img-fluid" src="assets/img/Screenshot_3.png"></div>
             </div>
-            <div class="row" style="padding:20px;">
+            <div class="row" style="padding:10px;">
                 <div class="col-md-4"><img class="img-fluid" src="assets/img/Screenshot_4.png"></div>
                 <div class="col-md-4"><img class="img-fluid" src="assets/img/Screenshot_5.png"></div>
                 <div class="col-md-4"><img class="img-fluid" src="assets/img/Screenshot_6.png"></div>
@@ -77,12 +77,90 @@
                 <div class="col"><img src="assets/img/logo_aynarra2.png" style="width:300px;"></div>
                 <div class="col"></div>
             </div>
-            <div class="row" style="padding:10px 0 0 20px;">
+            <div class="row">
                 <div class="col">
-                    <h1 class="text-center" style="color:rgb(51,51,51);"><strong>Memperkenalkan</strong></h1>
+                    <h1 class="text-center" style="color:rgb(51,51,51);font-size:36px;"><strong>Memperkenalkan</strong></h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
                     <h1 class="text-center" style="color:rgb(112,12,12);font-size:52px;"><strong>Aynarra 7 Miracle Power</strong><br></h1>
                 </div>
             </div>
+            <div class="row">
+                <div class="col">
+                    <p class="text-center">Kosmetik pertama di Indonesia yang memiliki Kualitas Import dari Jepang yang menjadi rujukan Kecantikan Wanita Asia<br></p>
+                    <p class="text-center"><strong>Aynarra Cosmetic</strong> terbuat dari bahan Alami, yg sangat aman untuk kulit. Aynarra&nbsp;adalah solusi untuk wanita yang banyak sekali masalah dengan banyak&nbsp;sekali produk kecantikan kulit yg berbahan Kimia, yg kita
+                        tahu bahan&nbsp;kimia yg dipakai terus menerus akan menyebabkan atau menimbulkan <strong><em>efek&nbsp;samping</em></strong> di kemudian hari.<br><br><br></p>
+                </div>
+            </div>
+            <div class="row" style="background-color:#fdff00;">
+                <div class="col">
+                    <h1 class="text-center" style="color:rgb(104,24,0);padding:10px;"><strong>7 Miracle Power Aynarra Cosmetic</strong><br></h1>
+                </div>
+            </div>
+            <div class="row" style="padding:30px 0 0 30PX;">
+                <div class="col-md-6"><img class="img-thumbnail img-fluid" src="assets/img/model1.jpg"></div>
+                <div class="col-md-6">
+                    <p class="lead text-justify">Tujuh kemampuan&nbsp;yang di rangkum menjadi satu di <strong>Aynarra Cosmetic</strong> dan tidak ada di produk lain, berikut ini adalah fungsi <strong>7 Miracle Power</strong> adalah :<br><br> 1. Memutihkan Kulit<br>2. Mencerahkan
+                        Kulit<br>3. Melembabkan Kulit<br>4. Melindungi Kulit<br>5. Mencegah Radikal-Bebas<br>6. Meremajakan Kulit<br>7. Mengatasi Penuaan-Dini<br></p>
+                </div>
+            </div>
+            <div class="row" style="background-color:#fdff00;margin:10px 0 30px 0;">
+                <div class="col">
+                    <h1 class="text-center" style="color:rgb(104,24,0);padding:10px;"><strong>TIGA PRODUK UNGGULAN</strong><br></h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="row d-inline-block">
+                        <div class="col"><img class="img-thumbnail img-fluid" src="assets/img/aynarra_smoothskin.jpg"></div>
+                        <div class="col" style="padding:15px 0;">
+                            <h3 class="text-center"><strong>Body Lotion</strong><br><strong>Smooth Satin</strong><br></h3>
+                        </div>
+                        <div class="col" style="color:white;">
+                            <p class="text-center" style="background-color:#ff0f00;"><strong>150.000 IDR</strong></p>
+                        </div>
+                        <div class="col" style="padding:15px 0;">
+                            <p class="lead text-justify" style="font-size:18px;height:270px;">Bahan dasar Coklat dan Titanium serta di tambah Spf 30, yang kita tahu Coklat<br> sangat bagus melembutkan dan mengenyalkan kulit di tambah Titanium <br>untuk memutihkan seluruh tubuh, apalagi di saat siang ada Spf untuk menghambat
+                                paparan sinat matahari yang bisa merusak kulit.<br></p>
+                        </div>
+                        <div class="col"><a class="btn btn-primary btn-block" role="button" href="https://api.whatsapp.com/send?phone=6285335198614&amp;text=Saya%20Mau%20Beli%20Aynarra%20Body%20Lotion%20Smooth%20Satin" target="_blank" id="btnorder">Miliki Sekarang</a></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="row d-inline-block">
+                        <div class="col"><img class="img-thumbnail img-fluid" src="assets/img/aynarra_exfoliatingglow.jpg"></div>
+                        <div class="col" style="padding:15px 0;">
+                            <h3 class="text-center"><strong>Body Scrub</strong><br><strong>Exfoliating Glow</strong><br></h3>
+                        </div>
+                        <div class="col" style="color:white;">
+                            <p class="text-center" style="background-color:#ff0f00;"><strong>160.000 IDR</strong></p>
+                        </div>
+                        <div class="col" style="height:316px;">
+                            <p class="lead text-justify" style="font-size:18px;">Bahan dasar biji coklat terbaik yang di panen setahun sekali dan&nbsp; Kopi terbaik yang sangat bagus membersihkan kulit2 mati, meregenerasi kulit dan membuat kulit menjadi kenyal dan lembut.<br></p>
+                        </div>
+                        <div class="col"><a class="btn btn-primary btn-block" role="button" href="https://api.whatsapp.com/send?phone=6285335198614&amp;text=Saya%20Mau%20Beli%20Aynarra%20Body%20Scrub%20Exfoliating%20Glow" target="_blank" id="btnorder">Miliki Sekarang</a></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="row d-inline-block">
+                        <div class="col"><img class="img-thumbnail img-fluid" src="assets/img/aynnarra_moisturizing_glow.jpg"></div>
+                        <div class="col" style="padding:15px 0;">
+                            <h3 class="text-center"><strong>Body Wash</strong><br><strong>Moisturizing Glow</strong><br></h3>
+                        </div>
+                        <div class="col" style="color:white;">
+                            <p class="text-center" style="background-color:#ff0f00;"><strong>150.000 IDR</strong></p>
+                        </div>
+                        <div class="col" style="height:316px;">
+                            <p class="lead text-justify" style="font-size:18px;">Bahan dasar Susu Kambing &amp; Pearl, yang kita tahu susu kambing sangat bagus memutihkan dan nengenyalkan kulit serta membuat wangi sepanjang <br>hari, di tambah Pearl yang sangat bagus untuk membuat kulit menjadi Glowing
+                                dan berkilau.<br></p>
+                        </div>
+                        <div class="col"><a class="btn btn-primary btn-block" role="button" href="https://api.whatsapp.com/send?phone=6285335198614&amp;text=Saya%20Mau%20Beli%20Aynarra%20Body%20Wash%20Moisturizing%20Glow" target="_blank" id="btnorder">Miliki Sekarang</a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="row"></div>
         </div>
     </section>
     <script src="assets/js/jquery.min.js"></script>
