--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Kosmetik Kecantikan Wanita Asia Kualitas Import">
     <title>Aynarra Cosmetic</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Molengo">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,800">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700">
+    <link rel="stylesheet" href="assets/css/Brands.css">
+    <link rel="stylesheet" href="assets/css/Footer-Basic.css">
     <link rel="stylesheet" href="assets/css/Header-Blue.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
     <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
@@ -94,21 +98,21 @@
                         tahu bahan&nbsp;kimia yg dipakai terus menerus akan menyebabkan atau menimbulkan <strong><em>efek&nbsp;samping</em></strong> di kemudian hari.<br><br><br></p>
                 </div>
             </div>
-            <div class="row" style="background-color:#fdff00;">
+            <div class="row" style="margin-bottom:30px;">
                 <div class="col">
-                    <h1 class="text-center" style="color:rgb(104,24,0);padding:10px;"><strong>7 Miracle Power Aynarra Cosmetic</strong><br></h1>
+                    <h1 class="text-center" style="color:rgb(104,24,0);padding:10px;background-color:#fdff00;"><strong>7 Miracle Power Aynarra Cosmetic</strong><br></h1>
                 </div>
             </div>
-            <div class="row" style="padding:30px 0 0 30PX;">
-                <div class="col-md-6"><img class="img-thumbnail img-fluid" src="assets/img/model1.jpg"></div>
+            <div class="row">
+                <div class="col-md-6"><img class="img-fluid" src="assets/img/model1.jpg"></div>
                 <div class="col-md-6">
                     <p class="lead text-justify">Tujuh kemampuan&nbsp;yang di rangkum menjadi satu di <strong>Aynarra Cosmetic</strong> dan tidak ada di produk lain, berikut ini adalah fungsi <strong>7 Miracle Power</strong> adalah :<br><br> 1. Memutihkan Kulit<br>2. Mencerahkan
                         Kulit<br>3. Melembabkan Kulit<br>4. Melindungi Kulit<br>5. Mencegah Radikal-Bebas<br>6. Meremajakan Kulit<br>7. Mengatasi Penuaan-Dini<br></p>
                 </div>
             </div>
-            <div class="row" style="background-color:#fdff00;margin:10px 0 30px 0;">
+            <div class="row" style="margin-bottom:30px;margin-top:30px;">
                 <div class="col">
-                    <h1 class="text-center" style="color:rgb(104,24,0);padding:10px;"><strong>TIGA PRODUK UNGGULAN</strong><br></h1>
+                    <h1 class="text-center" style="color:rgb(104,24,0);padding:10px;background-color:#fdff00;"><strong>TIGA PRODUK UNGGULAN</strong><br></h1>
                 </div>
             </div>
             <div class="row">
@@ -121,48 +125,140 @@
                         <div class="col" style="color:white;">
                             <p class="text-center" style="background-color:#ff0f00;"><strong>150.000 IDR</strong></p>
                         </div>
-                        <div class="col" style="padding:15px 0;">
-                            <p class="lead text-justify" style="font-size:18px;height:270px;">Bahan dasar Coklat dan Titanium serta di tambah Spf 30, yang kita tahu Coklat<br> sangat bagus melembutkan dan mengenyalkan kulit di tambah Titanium <br>untuk memutihkan seluruh tubuh, apalagi di saat siang ada Spf untuk menghambat
-                                paparan sinat matahari yang bisa merusak kulit.<br></p>
-                        </div>
                         <div class="col"><a class="btn btn-primary btn-block" role="button" href="https://api.whatsapp.com/send?phone=6285335198614&amp;text=Saya%20Mau%20Beli%20Aynarra%20Body%20Lotion%20Smooth%20Satin" target="_blank" id="btnorder">Miliki Sekarang</a></div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="row d-inline-block">
-                        <div class="col"><img class="img-thumbnail img-fluid" src="assets/img/aynarra_exfoliatingglow.jpg"></div>
-                        <div class="col" style="padding:15px 0;">
-                            <h3 class="text-center"><strong>Body Scrub</strong><br><strong>Exfoliating Glow</strong><br></h3>
-                        </div>
-                        <div class="col" style="color:white;">
-                            <p class="text-center" style="background-color:#ff0f00;"><strong>160.000 IDR</strong></p>
-                        </div>
-                        <div class="col" style="height:316px;">
-                            <p class="lead text-justify" style="font-size:18px;">Bahan dasar biji coklat terbaik yang di panen setahun sekali dan&nbsp; Kopi terbaik yang sangat bagus membersihkan kulit2 mati, meregenerasi kulit dan membuat kulit menjadi kenyal dan lembut.<br></p>
-                        </div>
-                        <div class="col"><a class="btn btn-primary btn-block" role="button" href="https://api.whatsapp.com/send?phone=6285335198614&amp;text=Saya%20Mau%20Beli%20Aynarra%20Body%20Scrub%20Exfoliating%20Glow" target="_blank" id="btnorder">Miliki Sekarang</a></div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="row d-inline-block">
-                        <div class="col"><img class="img-thumbnail img-fluid" src="assets/img/aynnarra_moisturizing_glow.jpg"></div>
-                        <div class="col" style="padding:15px 0;">
-                            <h3 class="text-center"><strong>Body Wash</strong><br><strong>Moisturizing Glow</strong><br></h3>
-                        </div>
-                        <div class="col" style="color:white;">
-                            <p class="text-center" style="background-color:#ff0f00;"><strong>150.000 IDR</strong></p>
-                        </div>
-                        <div class="col" style="height:316px;">
-                            <p class="lead text-justify" style="font-size:18px;">Bahan dasar Susu Kambing &amp; Pearl, yang kita tahu susu kambing sangat bagus memutihkan dan nengenyalkan kulit serta membuat wangi sepanjang <br>hari, di tambah Pearl yang sangat bagus untuk membuat kulit menjadi Glowing
-                                dan berkilau.<br></p>
-                        </div>
-                        <div class="col"><a class="btn btn-primary btn-block" role="button" href="https://api.whatsapp.com/send?phone=6285335198614&amp;text=Saya%20Mau%20Beli%20Aynarra%20Body%20Wash%20Moisturizing%20Glow" target="_blank" id="btnorder">Miliki Sekarang</a></div>
+                        <div
+                            class="col" style="padding:15px 0;">
+                            <p class="lead text-justify" style="font-size:18px;max-height:316px;padding:10px;">Bahan dasar Coklat dan Titanium serta di tambah Spf 30, yang kita tahu Coklat<br> sangat bagus melembutkan dan mengenyalkan kulit di tambah Titanium <br>untuk memutihkan seluruh tubuh, apalagi di saat siang ada Spf untuk menghambat
+                                paparan sinat matahari yang bisa merusak kulit.<br></p>
                     </div>
                 </div>
             </div>
-            <div class="row"></div>
+            <div class="col-md-4">
+                <div class="row d-inline-block">
+                    <div class="col"><img class="img-thumbnail img-fluid" src="assets/img/aynarra_exfoliatingglow.jpg"></div>
+                    <div class="col" style="padding:15px 0;">
+                        <h3 class="text-center"><strong>Body Scrub</strong><br><strong>Exfoliating Glow</strong><br></h3>
+                    </div>
+                    <div class="col" style="color:white;">
+                        <p class="text-center" style="background-color:#ff0f00;"><strong>160.000 IDR</strong></p>
+                    </div>
+                    <div class="col"><a class="btn btn-primary btn-block" role="button" href="https://api.whatsapp.com/send?phone=6285335198614&amp;text=Saya%20Mau%20Beli%20Aynarra%20Body%20Scrub%20Exfoliating%20Glow" target="_blank" id="btnorder">Miliki Sekarang</a></div>
+                    <div
+                        class="col" style="max-height:316px;padding:15px 0;">
+                        <p class="lead text-justify" style="font-size:18px;padding:10px;">Bahan dasar biji coklat terbaik yang di panen setahun sekali dan&nbsp; Kopi terbaik yang sangat bagus membersihkan kulit2 mati, meregenerasi kulit dan membuat kulit menjadi kenyal dan lembut.<br></p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="row d-inline-block">
+                <div class="col"><img class="img-thumbnail img-fluid" src="assets/img/aynnarra_moisturizing_glow.jpg"></div>
+                <div class="col" style="padding:15px 0;">
+                    <h3 class="text-center"><strong>Body Wash</strong><br><strong>Moisturizing Glow</strong><br></h3>
+                </div>
+                <div class="col" style="color:white;">
+                    <p class="text-center" style="background-color:#ff0f00;"><strong>150.000 IDR</strong></p>
+                </div>
+                <div class="col"><a class="btn btn-primary btn-block" role="button" href="https://api.whatsapp.com/send?phone=6285335198614&amp;text=Saya%20Mau%20Beli%20Aynarra%20Body%20Wash%20Moisturizing%20Glow" target="_blank" id="btnorder">Miliki Sekarang</a></div>
+                <div
+                    class="col" style="max-height:316px;padding:15px 0;">
+                    <p class="lead text-justify" style="font-size:18px;padding:10px;">Bahan dasar Susu Kambing &amp; Pearl, yang kita tahu susu kambing sangat bagus memutihkan dan nengenyalkan kulit serta membuat wangi sepanjang <br>hari, di tambah Pearl yang sangat bagus untuk membuat kulit menjadi Glowing dan berkilau.<br></p>
+            </div>
+        </div>
+        </div>
+        </div>
+        <div class="row"></div>
         </div>
     </section>
+    <div class="container-fluid" id="seccont" style="background-color:#fdff00;">
+        <div class="row" id="s2r1" style="padding:20px 0;">
+            <div class="col">
+                <h1 class="text-center" id="s2r1h1" style="color:rgb(51,51,51);">Aynarra Cosmetic Telah Terjual Lebih Dari 19.800 pcs<br></h1>
+                <div class="row" style="padding-bottom:20px;">
+                    <div class="col">
+                        <h2 class="text-center" style="font-size:52px;color:rgb(112,12,12);">Dapatkan Aynarra Cosmetic Sekarang Juga, Sebelum Kehabisan!<br></h2><a class="btn btn-primary btn-block" role="button" href="https://api.whatsapp.com/send?phone=6285335198614&amp;text=Saya%20Mau%20Beli%20Aynarra%20Body%20Scrub%20Exfoliating%20Glow"
+                            target="_blank" id="btnorder">Miliki Sekarang</a></div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 align-self-center" style="margin:0 auto;"><img class="img-thumbnail img-fluid" src="assets/img/model2.jpg" style="padding-top:10px;max-height:650px;"></div>
+                    <div class="col-md-6 align-self-center" style="margin:0 auto;"><img class="img-thumbnail img-fluid" src="assets/img/model3.jpeg" style="padding-top:10px;max-height:650px;"></div>
+                </div>
+            </div>
+        </div>
+        <div class="row" style="padding:10px;">
+            <div class="col-md-4"><img class="img-fluid" src="assets/img/model5.jpg"></div>
+            <div class="col-md-4"><img class="img-fluid" src="assets/img/model6.jpg"></div>
+            <div class="col-md-4"><img class="img-fluid" src="assets/img/model4.jpg"></div>
+        </div>
+    </div>
+    <div>
+        <div class="container">
+            <div class="row">
+                <div class="col" style="margin-top:30px;margin-bottom:20px;">
+                    <h2 class="text-center" style="font-size:52px;color:rgb(112,12,12);">Hal Penting Yang Patut Anda Ketahui:<br></h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div role="tablist" id="accordion-1">
+                        <div class="card">
+                            <div class="card-header" role="tab">
+                                <h5 class="mb-0"><a data-toggle="collapse" aria-expanded="false" aria-controls="accordion-1 .item-1" href="div#accordion-1 .item-1">Apakah Aynarra Itu?	<br></a></h5>
+                            </div>
+                            <div class="collapse item-1" role="tabpanel" data-parent="#accordion-1">
+                                <div class="card-body">
+                                    <p class="card-text">Produk Kualitas Import dari Jepang yang menggunakan bahan bahan alami untuk menjawab kebutuhan Kecantikan Wanita Asia<br></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header" role="tab">
+                                <h5 class="mb-0"><a data-toggle="collapse" aria-expanded="false" aria-controls="accordion-1 .item-2" href="div#accordion-1 .item-2">Apakah Aynarra Cosmetic Sudah Memiliki BPOM?	<br></a></h5>
+                            </div>
+                            <div class="collapse item-2" role="tabpanel" data-parent="#accordion-1">
+                                <div class="card-body">
+                                    <p class="card-text">Ya! semua produk Aynarra sudah memiliki nomer BPOM sehingga Anda tidak &nbsp;perlu khawatir untuk memakainya. Selain itu, bagaimana mungkin kami berani menawarkan Aynarra Cosmetic bila tidak memiliki legalitas dari
+                                        Dinas Kesehatan RI<br></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header" role="tab">
+                                <h5 class="mb-0"><a data-toggle="collapse" aria-expanded="false" aria-controls="accordion-1 .item-3" href="div#accordion-1 .item-3">Apakah Ada Efek Sampingnya?	<br></a></h5>
+                            </div>
+                            <div class="collapse item-3" role="tabpanel" data-parent="#accordion-1">
+                                <div class="card-body">
+                                    <p class="card-text">Ya! Aynarra Cosmetic tidak&nbsp; ada efek samping karena terbuat dari bahan bahan alami.<br></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header" role="tab">
+                                <h5 class="mb-0"><a data-toggle="collapse" aria-expanded="false" aria-controls="accordion-1 .item-4" href="div#accordion-1 .item-4">Apakah Aynarra Cosmetic Bisa Dibeli Dari Seluruh Indonesia?	<br></a></h5>
+                            </div>
+                            <div class="collapse item-4" role="tabpanel" data-parent="#accordion-1">
+                                <div class="card-body">
+                                    <p class="card-text">Tentu Saja! Aynarra Cosmetic bisa Anda dapatkan dengan mudah dimanapun Anda berada karena Anda bisa memesannya secara online dan kami memiliki jaringan ekspedisi yang bisa menjangkau seluruh wilayah Indonesia.<br></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-basic">
+        <footer>
+            <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="#">Home</a></li>
+                <li class="list-inline-item"><a href="#">Services</a></li>
+                <li class="list-inline-item"><a href="#">About</a></li>
+                <li class="list-inline-item"><a href="#">Terms</a></li>
+                <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+            </ul>
+            <p class="copyright">Aynarra Cosmetic 7 Miracle Power © 2018</p>
+        </footer>
+    </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
